--- a/app/chat/static/css/style.css
+++ b/app/chat/static/css/style.css
@@ -2,7 +2,38 @@ body {
     background-color: gray;
 }
 
-.form {
-    display: flex-row;
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.join {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.create-btn {
+    width: 100%;
+}
+
+.error {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: red;
+}
+
+.rooms {
+    display: flex;
+    justify-content: center;
 }
