--- a/app/chat/templates/home.html
+++ b/app/chat/templates/home.html
@@ -1,30 +1,24 @@
-{% extends 'base.html' %}
-
-{% block title %}
-    Home Page
-{% endblock title %}
-
-{% block content %}
-    <div class="flex flex-row">
-        <form method="post" class="form">
-            <div class="flex flex-column">
-                <label for="">Name:</label>
-                <input type="text" name="name" placeholder="Username" value="{{name}}">
-            </div>
-            <div class="join">
-                <input type="text" name="code" placeholder="Room Code" value="{{code}}">
-                <button type="submit">Join Room</button>
-            </div>
-            <button type="submit" name="create" class="create-btn">Create</button>
-        </form>
-        <div class="rooms">
-            <ul>
-                {% for code, data in rooms.items() %}
-                    <li>
-                        <p>Code:{{code}}:{{data}}</p>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-{% endblock content %} 
+{% extends 'base.html' %} {% block content %}
+<form method="post" class="buttons">
+  <h3>Enter The Chat Room</h3>
+  <div>
+    <label>Name:</label>
+    <input
+      type="text"
+      placeholder="Pick a name!"
+      name="name"
+      value="{{name}}"
+    />
+  </div>
+  <div class="join">
+    <input type="text" placeholder="Room Code" name="code" value="{{code}}" />
+    <button type="submit" name="join">Join a Room</button>
+  </div>
+  <button type="submit" name="create" class="create-btn">Create a Room</button>
+  {% if error %}
+  <ul>
+    <li>{{error}}</li>
+  </ul>
+  {% endif %}
+</form>
+{% endblock %}
