--- a/app/chat/templates/room.html
+++ b/app/chat/templates/room.html
@@ -1,21 +1,52 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<div class="message-box">
+  <h2>Chat Room: {{code}}</h2>
+  <div class="messages" id="messages"></div>
+    <div class="inputs">
+        <input
+            type="text"
+            rows="3"
+            placeholder="Message"
+            name="message"
+            id="message"
+        />
+        <button type="button" name="send" id="send-btn" onClick="sendMessage()">
+            Send
+        </button>
+  </div>
+</div>
+<script type="text/javascript">
+  var socketio = io();
 
-{% block title %}Room{% endblock title %}
+  const messages = document.getElementById("messages");
 
-{% block content %}
-    <div>
-        <h2>Chat Room: {{code}}</h2>
-        <div id="messages"></div>
-        <div class="inputs">
-            <input type="text" placeholder="Message" name="message" id="message">
-            <button type="button" name="send" id="send-btn" onclick="sendMessage()">Send</button>
-        </div>
+  const createMessage = (name, msg) => {
+    const content = `
+    <div class="text">
+        <span>
+            <strong>${name}</strong>: ${msg}
+        </span>
+        <span class="muted">
+            ${new Date().toLocaleString()}
+        </span>
     </div>
-    <script type="text/javascript">
-        var socketio = io();
+    `;
+    messages.innerHTML += content;
+  };
 
-        const sendMessage = () => {
-            console.log("send")
-        }
-    </script>
-{% endblock content %}
+  socketio.on("message", (data) => {
+    createMessage(data.name, data.message);
+  });
+
+  const sendMessage = () => {
+    const message = document.getElementById("message");
+    if (message.value == "") return;
+    socketio.emit("message", { data: message.value });
+    message.value = "";
+  };
+</script>
+{% for msg in messages %}
+<script type="text/javascript">
+  createMessage("{{msg.name}}", "{{msg.message}}");
+</script>
+{% endfor %} {% endblock %}
